# muq-beat-weaver

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: muq_frozen_base.json  muq_frozen_base_bs8.json  muq_frozen_base_bs8_45ep.json  muq_frozen_base_bs8_45ep_wr005.json  muq_frozen_small.json  muq_frozen_small_bs8.json  muq_partial_unfreeze.json
docs/: ai-usage.md  beatsaver_x3_execution_plan.md  madmom_timing_experiment.md
muq_beat_weaver/: __init__.py  cli.py
muq_beat_weaver/model/: __init__.py  adapter.py  audio.py  config.py  dataset.py  decoder.py  encoder.py  evaluate.py  experiment_eval.py  exporter.py  inference.py  model.py  muq_embeddings.py  parquet.py  timing.py  tokenizer.py  training.py  transformer.py
muq_beat_weaver/parsers/: beatmap_parser.py  dat_reader.py  info_parser.py
muq_beat_weaver/schemas/: detection.py  normalized.py  v2.py  v3.py  v4.py
research/: research.md
research/CSCI4052/: Final Project.md
scripts/: _light_imports.py  analyze_tensorboard_run.py  audit_training_targets.py  build_muq_beatgrid_cache.py  build_timing_metadata.py  cache_muq_subset.py  compare_inference_modes.py  evaluate.py  generate_from_audio.py  run_beatsaver_x3_pipeline.ps1  tensorboard.ps1  train_muq_precomputed.py
tests/: test_dataset_windowing.py  test_evaluate.py  test_exporter.py  test_inference.py  test_muq_embeddings.py  test_parsers.py  test_schemas.py  test_timing.py  test_tokenizer.py  test_training_schedule_and_eval.py
