[project]
name = "muq-beat-weaver"
version = "0.1.0"
description = "MuQ-first Beat Weaver experiment repo"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchaudio>=2.2",
  "librosa>=0.10",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "soundfile>=0.12",
  "tensorboard>=2.16",
  "numpy>=1.26",
  "scipy>=1.12",
  "requests>=2.31",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
muq-beat-weaver = "muq_beat_weaver.cli:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools.packages.find]
include = ["muq_beat_weaver*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

